@@ -88,8 +88,11 @@ import tech.pegasys.teku.spec.constants.Domain;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlindedBlobSidecar;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlindedBlobSidecarSchema;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.Blob;
+import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobKzgCommitmentsSchema;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobSchema;
+import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobSidecar;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobSidecarOld;
+import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobSidecarSchema;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.BlobSidecarSchemaOld;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.SignedBlindedBlobSidecar;
 import tech.pegasys.teku.spec.datastructures.blobs.versions.deneb.SignedBlindedBlobSidecarSchema;
@@ -109,13 +112,10 @@ import tech.pegasys.teku.spec.datastructures.blocks.blockbody.BeaconBlockBodySch
 import tech.pegasys.teku.spec.datastructures.blocks.blockbody.versions.altair.SyncAggregate;
 import tech.pegasys.teku.spec.datastructures.blocks.blockbody.versions.altair.SyncAggregateSchema;
 import tech.pegasys.teku.spec.datastructures.blocks.blockbody.versions.deneb.BeaconBlockBodyDeneb;
-import tech.pegasys.teku.spec.datastructures.blocks.blockbody.versions.deneb.BeaconBlockBodySchemaDeneb;
 import tech.pegasys.teku.spec.datastructures.blocks.versions.deneb.BlindedBlockContents;
 import tech.pegasys.teku.spec.datastructures.blocks.versions.deneb.BlockContents;
 import tech.pegasys.teku.spec.datastructures.blocks.versions.deneb.SignedBlindedBlockContents;
 import tech.pegasys.teku.spec.datastructures.blocks.versions.deneb.SignedBlockContents;
-import tech.pegasys.teku.spec.datastructures.builder.BlindedBlobsBundle;
-import tech.pegasys.teku.spec.datastructures.builder.BlindedBlobsBundleSchema;
 import tech.pegasys.teku.spec.datastructures.builder.BlobsBundleSchema;
 import tech.pegasys.teku.spec.datastructures.builder.BuilderBid;
 import tech.pegasys.teku.spec.datastructures.builder.ExecutionPayloadAndBlobsBundle;
@@ -617,7 +617,7 @@ public final class DataStructureUtil {
                   .publicKey(builderPublicKey);
               schemaDefinitions
                   .toVersionDeneb()
-                  .ifPresent(__ -> builder.blobKzgCommitments(randomSszKzgCommitmentList()));
+                  .ifPresent(__ -> builder.blobKzgCommitments(randomBlobKzgCommitments()));
             });
   }
 
@@ -634,7 +634,7 @@ public final class DataStructureUtil {
                   .publicKey(randomPublicKey());
               schemaDefinitions
                   .toVersionDeneb()
-                  .ifPresent(__ -> builder.blobKzgCommitments(randomSszKzgCommitmentList()));
+                  .ifPresent(__ -> builder.blobKzgCommitments(randomBlobKzgCommitments()));
             });
   }
 
@@ -1220,8 +1220,7 @@ public final class DataStructureUtil {
                 builder.blsToExecutionChanges(randomSignedBlsToExecutionChangesList());
               }
               if (builder.supportsKzgCommitments()) {
-                builder.blobKzgCommitments(
-                    SafeFuture.completedFuture(randomSszKzgCommitmentList()));
+                builder.blobKzgCommitments(SafeFuture.completedFuture(randomBlobKzgCommitments()));
               }
             })
         .join();
@@ -1262,8 +1261,7 @@ public final class DataStructureUtil {
                 builder.blsToExecutionChanges(randomSignedBlsToExecutionChangesList());
               }
               if (builder.supportsKzgCommitments()) {
-                builder.blobKzgCommitments(
-                    SafeFuture.completedFuture(randomSszKzgCommitmentList()));
+                builder.blobKzgCommitments(SafeFuture.completedFuture(randomBlobKzgCommitments()));
               }
             })
         .join();
@@ -1302,8 +1300,7 @@ public final class DataStructureUtil {
                 builder.blsToExecutionChanges(randomSignedBlsToExecutionChangesList());
               }
               if (builder.supportsKzgCommitments()) {
-                builder.blobKzgCommitments(
-                    SafeFuture.completedFuture(randomSszKzgCommitmentList()));
+                builder.blobKzgCommitments(SafeFuture.completedFuture(randomBlobKzgCommitments()));
               }
             })
         .join();
@@ -1353,8 +1350,7 @@ public final class DataStructureUtil {
                 builder.blsToExecutionChanges(randomSignedBlsToExecutionChangesList());
               }
               if (builder.supportsKzgCommitments()) {
-                builder.blobKzgCommitments(
-                    SafeFuture.completedFuture(randomSszKzgCommitmentList()));
+                builder.blobKzgCommitments(SafeFuture.completedFuture(randomBlobKzgCommitments()));
               }
             })
         .join();
@@ -1387,8 +1383,7 @@ public final class DataStructureUtil {
                     .syncAggregate(this.randomSyncAggregateIfRequiredBySchema(schema))
                     .executionPayload(SafeFuture.completedFuture(randomExecutionPayload()))
                     .blsToExecutionChanges(this.randomSignedBlsToExecutionChangesList())
-                    .blobKzgCommitments(
-                        SafeFuture.completedFuture(this.emptySszKzgCommitmentList())))
+                    .blobKzgCommitments(SafeFuture.completedFuture(this.emptyBlobKzgCommitments())))
         .join();
   }
 
@@ -1420,7 +1415,7 @@ public final class DataStructureUtil {
                     .executionPayload(SafeFuture.completedFuture(randomExecutionPayload()))
                     .blsToExecutionChanges(this.randomSignedBlsToExecutionChangesList())
                     .blobKzgCommitments(
-                        SafeFuture.completedFuture(randomSszKzgCommitmentList(count))))
+                        SafeFuture.completedFuture(randomBlobKzgCommitments(count))))
         .join();
   }
 
@@ -1458,8 +1453,7 @@ public final class DataStructureUtil {
                 builder.blsToExecutionChanges(randomSignedBlsToExecutionChangesList());
               }
               if (builder.supportsKzgCommitments()) {
-                builder.blobKzgCommitments(
-                    SafeFuture.completedFuture(randomSszKzgCommitmentList()));
+                builder.blobKzgCommitments(SafeFuture.completedFuture(randomBlobKzgCommitments()));
               }
             })
         .join();
@@ -2140,7 +2134,8 @@ public final class DataStructureUtil {
 
   public List<BlobSidecarOld> randomBlobSidecarsForBlock(
       final SignedBeaconBlock block,
-      final BiFunction<Integer, RandomBlobSidecarBuilder, RandomBlobSidecarBuilder> modifier) {
+      final BiFunction<Integer, RandomBlobSidecarOldBuilder, RandomBlobSidecarOldBuilder>
+          modifier) {
     return randomSignedBlobSidecarsForBlock(block, modifier).stream()
         .map(SignedBlobSidecarOld::getBlobSidecar)
         .collect(toList());
@@ -2148,7 +2143,8 @@ public final class DataStructureUtil {
 
   public List<SignedBlobSidecarOld> randomSignedBlobSidecarsForBlock(
       final SignedBeaconBlock block,
-      final BiFunction<Integer, RandomBlobSidecarBuilder, RandomBlobSidecarBuilder> modifier) {
+      final BiFunction<Integer, RandomBlobSidecarOldBuilder, RandomBlobSidecarOldBuilder>
+          modifier) {
     final SszList<SszKZGCommitment> blobKzgCommitments =
         BeaconBlockBodyDeneb.required(block.getBeaconBlock().orElseThrow().getBody())
             .getBlobKzgCommitments();
@@ -2156,7 +2152,7 @@ public final class DataStructureUtil {
     return IntStream.range(0, blobKzgCommitments.size())
         .mapToObj(
             index -> {
-              final RandomBlobSidecarBuilder builder =
+              final RandomBlobSidecarOldBuilder builder =
                   createRandomBlobSidecarBuilder()
                       .slot(block.getSlot())
                       .blockRoot(block.getRoot())
@@ -2170,12 +2166,16 @@ public final class DataStructureUtil {
         .collect(toList());
   }
 
-  public BlobSidecarOld randomBlobSidecar() {
+  public BlobSidecar randomBlobSidecar() {
     return new RandomBlobSidecarBuilder().build();
   }
 
-  public BlobSidecarOld randomBlobSidecar(final BlobIdentifier blobIdentifier) {
-    return new RandomBlobSidecarBuilder()
+  public BlobSidecarOld randomBlobSidecarOld() {
+    return new RandomBlobSidecarOldBuilder().build();
+  }
+
+  public BlobSidecarOld randomBlobSidecarOld(final BlobIdentifier blobIdentifier) {
+    return new RandomBlobSidecarOldBuilder()
         .index(blobIdentifier.getIndex())
         .blockRoot(blobIdentifier.getBlockRoot())
         .build();
@@ -2184,22 +2184,22 @@ public final class DataStructureUtil {
   public List<BlobSidecarOld> randomBlobSidecars(int count) {
     List<BlobSidecarOld> blobSidecars = new ArrayList<>();
     for (int i = 0; i < count; i++) {
-      blobSidecars.add(new RandomBlobSidecarBuilder().build());
+      blobSidecars.add(new RandomBlobSidecarOldBuilder().build());
     }
     return blobSidecars;
   }
 
-  public BlobSidecarOld randomBlobSidecar(
+  public BlobSidecarOld randomBlobSidecarOld(
       final UInt64 slot, final Bytes32 blockRoot, final UInt64 index) {
-    return new RandomBlobSidecarBuilder().slot(slot).index(index).blockRoot(blockRoot).build();
+    return new RandomBlobSidecarOldBuilder().slot(slot).index(index).blockRoot(blockRoot).build();
   }
 
-  public BlobSidecarOld randomBlobSidecar(
+  public BlobSidecarOld randomBlobSidecarOld(
       final UInt64 slot,
       final Bytes32 blockRoot,
       final Bytes32 parentBlockRoot,
       final UInt64 index) {
-    return new RandomBlobSidecarBuilder()
+    return new RandomBlobSidecarOldBuilder()
         .slot(slot)
         .index(index)
         .blockRoot(blockRoot)
@@ -2207,8 +2207,8 @@ public final class DataStructureUtil {
         .build();
   }
 
-  public BlobSidecarOld randomBlobSidecar(final Bytes32 blockRoot, final UInt64 index) {
-    return new RandomBlobSidecarBuilder().index(index).blockRoot(blockRoot).build();
+  public BlobSidecarOld randomBlobSidecarOld(final Bytes32 blockRoot, final UInt64 index) {
+    return new RandomBlobSidecarOldBuilder().index(index).blockRoot(blockRoot).build();
   }
 
   public BlobIdentifier randomBlobIdentifier() {
@@ -2240,22 +2240,6 @@ public final class DataStructureUtil {
         randomSszList(schema.getBlobsSchema(), this::randomBlob, numberOfBlobs));
   }
 
-  public BlindedBlobsBundle randomBlindedBlobsBundle(final int count) {
-    final UInt64 slot = randomSlot();
-    final SchemaDefinitionsDeneb schemaDefinitions = getDenebSchemaDefinitions(slot);
-    final BlindedBlobsBundleSchema schema = schemaDefinitions.getBlindedBlobsBundleSchema();
-
-    return new BlindedBlobsBundle(
-        schema,
-        randomSszList(schema.getCommitmentsSchema(), this::randomSszKZGCommitment, count),
-        randomSszList(schema.getProofsSchema(), this::randomSszKZGProof, count),
-        randomSszList(schema.getBlobRootsSchema(), count, this::randomSszBytes32));
-  }
-
-  public BlindedBlobsBundle randomBlindedBlobsBundle() {
-    return randomBlindedBlobsBundle(randomNumberOfBlobCommitmentsPerBlock());
-  }
-
   public BlobsBundle randomBlobsBundle() {
     return randomBlobsBundle(Optional.empty(), randomSlot());
   }
@@ -2267,8 +2251,9 @@ public final class DataStructureUtil {
   private BlobsBundle randomBlobsBundle(final Optional<Integer> count, final UInt64 slot) {
     final BlobSchema blobSchema = getDenebSchemaDefinitions(slot).getBlobSchema();
     final List<KZGCommitment> commitments =
-        (count.isPresent() ? randomSszKzgCommitmentList(count.get()) : randomSszKzgCommitmentList())
-            .stream().map(SszKZGCommitment::getKZGCommitment).collect(toList());
+        count.map(this::randomBlobKzgCommitments).orElse(randomBlobKzgCommitments()).stream()
+            .map(SszKZGCommitment::getKZGCommitment)
+            .toList();
     final List<KZGProof> proofs =
         IntStream.range(0, commitments.size()).mapToObj(__ -> randomKZGProof()).collect(toList());
     return new BlobsBundle(
@@ -2280,21 +2265,21 @@ public final class DataStructureUtil {
   }
 
   public SignedBlobSidecarOld randomSignedBlobSidecar() {
-    return new RandomBlobSidecarBuilder().buildSigned();
+    return new RandomBlobSidecarOldBuilder().buildSigned();
   }
 
   public BlindedBlobSidecar randomBlindedBlobSidecar() {
-    return new RandomBlobSidecarBuilder().buildBlinded();
+    return new RandomBlobSidecarOldBuilder().buildBlinded();
   }
 
   public SignedBlindedBlobSidecar randomSignedBlindedBlobSidecar() {
-    return new RandomBlobSidecarBuilder().buildSignedBlinded();
+    return new RandomBlobSidecarOldBuilder().buildSignedBlinded();
   }
 
   public List<BlindedBlobSidecar> randomBlindedBlobSidecars(final int count) {
     final List<BlindedBlobSidecar> blindedBlobSidecars = new ArrayList<>();
     for (int i = 0; i < count; i++) {
-      blindedBlobSidecars.add(new RandomBlobSidecarBuilder().buildBlinded());
+      blindedBlobSidecars.add(new RandomBlobSidecarOldBuilder().buildBlinded());
     }
     return blindedBlobSidecars;
   }
@@ -2302,7 +2287,7 @@ public final class DataStructureUtil {
   public List<SignedBlobSidecarOld> randomSignedBlobSidecars(final int count) {
     final List<SignedBlobSidecarOld> signedBlobSidecars = new ArrayList<>();
     for (int i = 0; i < count; i++) {
-      signedBlobSidecars.add(new RandomBlobSidecarBuilder().buildSigned());
+      signedBlobSidecars.add(new RandomBlobSidecarOldBuilder().buildSigned());
     }
     return signedBlobSidecars;
   }
@@ -2312,7 +2297,7 @@ public final class DataStructureUtil {
     final List<SignedBlindedBlobSidecar> signedBlindedBlobSidecars = new ArrayList<>();
     for (int i = 0; i < blobsBundle.getNumberOfBlobs(); i++) {
       signedBlindedBlobSidecars.add(
-          new RandomBlobSidecarBuilder()
+          new RandomBlobSidecarOldBuilder()
               .index(UInt64.valueOf(i))
               .blob(blobsBundle.getBlobs().get(i).getBytes())
               .kzgCommitment(blobsBundle.getCommitments().get(i).getBytesCompressed())
@@ -2325,7 +2310,7 @@ public final class DataStructureUtil {
   public List<SignedBlindedBlobSidecar> randomSignedBlindedBlobSidecars(final int count) {
     final List<SignedBlindedBlobSidecar> signedBlindedBlobSidecars = new ArrayList<>();
     for (int i = 0; i < count; i++) {
-      signedBlindedBlobSidecars.add(new RandomBlobSidecarBuilder().buildSignedBlinded());
+      signedBlindedBlobSidecars.add(new RandomBlobSidecarOldBuilder().buildSignedBlinded());
     }
     return signedBlindedBlobSidecars;
   }
@@ -2392,11 +2377,11 @@ public final class DataStructureUtil {
   }
 
   public SignedBlobSidecarOld randomSignedBlobSidecar(final UInt64 index) {
-    return new RandomBlobSidecarBuilder().index(index).buildSigned();
+    return new RandomBlobSidecarOldBuilder().index(index).buildSigned();
   }
 
-  public RandomBlobSidecarBuilder createRandomBlobSidecarBuilder() {
-    return new RandomBlobSidecarBuilder();
+  public RandomBlobSidecarOldBuilder createRandomBlobSidecarBuilder() {
+    return new RandomBlobSidecarOldBuilder();
   }
 
   public SszList<ProposerSlashing> randomProposerSlashings(
@@ -2422,7 +2407,7 @@ public final class DataStructureUtil {
         count);
   }
 
-  public class RandomBlobSidecarBuilder {
+  public class RandomBlobSidecarOldBuilder {
     private Optional<Bytes32> blockRoot = Optional.empty();
     private Optional<UInt64> index = Optional.empty();
     private Optional<UInt64> slot = Optional.empty();
@@ -2432,47 +2417,47 @@ public final class DataStructureUtil {
     private Optional<Bytes48> kzgCommitment = Optional.empty();
     private Optional<Bytes48> kzgProof = Optional.empty();
 
-    public RandomBlobSidecarBuilder blockRoot(final Bytes32 blockRoot) {
+    public RandomBlobSidecarOldBuilder blockRoot(final Bytes32 blockRoot) {
       this.blockRoot = Optional.of(blockRoot);
       return this;
     }
 
-    public RandomBlobSidecarBuilder index(final UInt64 index) {
+    public RandomBlobSidecarOldBuilder index(final UInt64 index) {
       this.index = Optional.of(index);
       return this;
     }
 
-    public RandomBlobSidecarBuilder slot(final UInt64 slot) {
+    public RandomBlobSidecarOldBuilder slot(final UInt64 slot) {
       this.slot = Optional.of(slot);
       return this;
     }
 
-    public RandomBlobSidecarBuilder blockParentRoot(final Bytes32 blockParentRoot) {
+    public RandomBlobSidecarOldBuilder blockParentRoot(final Bytes32 blockParentRoot) {
       this.blockParentRoot = Optional.of(blockParentRoot);
       return this;
     }
 
-    public RandomBlobSidecarBuilder proposerIndex(final UInt64 proposerIndex) {
+    public RandomBlobSidecarOldBuilder proposerIndex(final UInt64 proposerIndex) {
       this.proposerIndex = Optional.of(proposerIndex);
       return this;
     }
 
-    public RandomBlobSidecarBuilder blob(final Bytes blob) {
+    public RandomBlobSidecarOldBuilder blob(final Bytes blob) {
       this.blob = Optional.of(blob);
       return this;
     }
 
-    public RandomBlobSidecarBuilder kzgCommitment(final Bytes48 kzgCommitment) {
+    public RandomBlobSidecarOldBuilder kzgCommitment(final Bytes48 kzgCommitment) {
       this.kzgCommitment = Optional.of(kzgCommitment);
       return this;
     }
 
-    public RandomBlobSidecarBuilder kzgProof(final Bytes48 kzgProof) {
+    public RandomBlobSidecarOldBuilder kzgProof(final Bytes48 kzgProof) {
       this.kzgProof = Optional.of(kzgProof);
       return this;
     }
 
-    public RandomBlobSidecarBuilder forBlock(final BeaconBlock block) {
+    public RandomBlobSidecarOldBuilder forBlock(final BeaconBlock block) {
       this.slot = Optional.of(block.getSlot());
       this.blockRoot = Optional.of(block.getRoot());
       this.blockParentRoot = Optional.of(block.getParentRoot());
@@ -2482,7 +2467,7 @@ public final class DataStructureUtil {
 
     public BlobSidecarOld build() {
       final BlobSidecarSchemaOld blobSidecarSchema =
-          getDenebSchemaDefinitions(slot.orElse(randomUInt64())).getBlobSidecarSchema();
+          getDenebSchemaDefinitions(slot.orElse(randomUInt64())).getBlobSidecarOldSchema();
 
       return blobSidecarSchema.create(
           blockRoot.orElse(randomBytes32()),
@@ -2498,7 +2483,7 @@ public final class DataStructureUtil {
     public SignedBlobSidecarOld buildSigned(final Optional<BLSSignature> blsSignature) {
       BlobSidecarOld blobSidecar = build();
       final SignedBlobSidecarSchemaOld blobSidecarSchema =
-          getDenebSchemaDefinitions(slot.orElse(randomUInt64())).getSignedBlobSidecarSchema();
+          getDenebSchemaDefinitions(slot.orElse(randomUInt64())).getSignedBlobSidecarOldSchema();
 
       return blobSidecarSchema.create(blobSidecar, blsSignature.orElse(randomSignature()));
     }
@@ -2530,30 +2515,87 @@ public final class DataStructureUtil {
     }
   }
 
-  public SszList<SszKZGCommitment> randomSszKzgCommitmentList() {
-    final int count = randomInt(spec.getMaxBlobsPerBlock().orElseThrow()) + 1;
-    return randomSszKzgCommitmentList(count);
+  public class RandomBlobSidecarBuilder {
+    private Optional<UInt64> index = Optional.empty();
+    private Optional<Bytes> blob = Optional.empty();
+    private Optional<Bytes48> kzgCommitment = Optional.empty();
+    private Optional<Bytes48> kzgProof = Optional.empty();
+    private Optional<SignedBeaconBlockHeader> signedBeaconBlockHeader = Optional.empty();
+    private Optional<List<Bytes32>> kzgCommitmentInclusionProof = Optional.empty();
+
+    public RandomBlobSidecarBuilder index(final UInt64 index) {
+      this.index = Optional.of(index);
+      return this;
+    }
+
+    public RandomBlobSidecarBuilder blob(final Bytes blob) {
+      this.blob = Optional.of(blob);
+      return this;
+    }
+
+    public RandomBlobSidecarBuilder kzgCommitment(final Bytes48 kzgCommitment) {
+      this.kzgCommitment = Optional.of(kzgCommitment);
+      return this;
+    }
+
+    public RandomBlobSidecarBuilder kzgProof(final Bytes48 kzgProof) {
+      this.kzgProof = Optional.of(kzgProof);
+      return this;
+    }
+
+    public RandomBlobSidecarBuilder signedBeaconBlockHeader(
+        final SignedBeaconBlockHeader signedBeaconBlockHeader) {
+      this.signedBeaconBlockHeader = Optional.of(signedBeaconBlockHeader);
+      return this;
+    }
+
+    public RandomBlobSidecarBuilder kzgCommitmentInclusionProof(
+        final List<Bytes32> kzgCommitmentInclusionProof) {
+      this.kzgCommitmentInclusionProof = Optional.of(kzgCommitmentInclusionProof);
+      return this;
+    }
+
+    public BlobSidecar build() {
+      final BlobSidecarSchema blobSidecarSchema =
+          getDenebSchemaDefinitions(
+                  signedBeaconBlockHeader
+                      .map(header -> header.getMessage().getSlot())
+                      .orElse(randomUInt64()))
+              .getBlobSidecarSchema();
+
+      return blobSidecarSchema.create(
+          index.orElse(randomUInt64()),
+          blob.orElse(randomBytes(blobSidecarSchema.getBlobSchema().getLength())),
+          kzgCommitment.orElse(randomBytes48()),
+          kzgProof.orElse(randomBytes48()),
+          signedBeaconBlockHeader.orElse(randomSignedBeaconBlockHeader()),
+          kzgCommitmentInclusionProof.orElse(
+              IntStream.range(
+                      0, blobSidecarSchema.getKzgCommitmentInclusionProofSchema().getLength())
+                  .mapToObj(__ -> randomBytes32())
+                  .toList()));
+    }
   }
 
-  public SszList<SszKZGCommitment> randomSszKzgCommitmentList(final int count) {
-    final SszListSchema<SszKZGCommitment, ?> kzgCommitmentsSchema =
-        BeaconBlockBodySchemaDeneb.required(
-                spec.forMilestone(SpecMilestone.DENEB)
-                    .getSchemaDefinitions()
-                    .getBeaconBlockBodySchema())
+  public SszList<SszKZGCommitment> randomBlobKzgCommitments() {
+    // use MAX_BLOBS_PER_BLOCK as a limit
+    return randomBlobKzgCommitments(randomNumberOfBlobsPerBlock());
+  }
+
+  public SszList<SszKZGCommitment> randomBlobKzgCommitments(final int count) {
+    final BlobKzgCommitmentsSchema blobKzgCommitmentsSchema =
+        SchemaDefinitionsDeneb.required(
+                spec.forMilestone(SpecMilestone.DENEB).getSchemaDefinitions())
             .getBlobKzgCommitmentsSchema();
 
-    return randomSszList(kzgCommitmentsSchema, count, this::randomSszKZGCommitment);
+    return randomSszList(blobKzgCommitmentsSchema, count, this::randomSszKZGCommitment);
   }
 
-  public SszList<SszKZGCommitment> emptySszKzgCommitmentList() {
+  public SszList<SszKZGCommitment> emptyBlobKzgCommitments() {
     return SchemaDefinitionsDeneb.required(
             spec.forMilestone(SpecMilestone.DENEB).getSchemaDefinitions())
-        .getBeaconBlockBodySchema()
-        .toVersionDeneb()
-        .orElseThrow()
         .getBlobKzgCommitmentsSchema()
-        .createFromElements(List.of());
+        .of();
   }
 
   public RewardAndPenaltyDeltas randomRewardAndPenaltyDeltas(final int validatorCount) {
@@ -2572,11 +2614,6 @@ public final class DataStructureUtil {
   private int randomNumberOfBlobsPerBlock() {
     // minimum 1 blob
     return randomInt(1, spec.getMaxBlobsPerBlock().orElseThrow() + 1);
-  }
-
-  private int randomNumberOfBlobCommitmentsPerBlock() {
-    // minimum 1 commitment
-    return randomInt(1, spec.getMaxBlobCommitmentsPerBlock().orElseThrow() + 1);
   }
 
   private int randomInt(final int origin, final int bound) {
